# aic_writer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  lambda.sh  lambda_function.py  pyproject.toml  pytest.ini
.github/workflows/: build_deploy.yaml  test.yaml
aic_writer/: __init__.py  __main__.py  do.py
aic_writer/adapter/: __init__.py  db_repository.py  interface.py  jma_repository.py  tec_material_parser.py
aic_writer/domain/: __init__.py  area_information_city.py
aic_writer/infrastructure/: __init__.py  aic_reader.py  dynamo_db_driver.py  http_client.py
aic_writer/usecase/: __init__.py  interactor.py  interface.py
tests/adapter/: test_jma_repository.py  test_tec_material_parser.py
